# personal-assistant-mcp-client

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
assistant_agent/: agent.py  client.py  config.py
assistant_agent/sub_agents/: basic_agents.py  notes_agent.py
assistant_agent/tools/: get_current_time.py  get_weather_tool.py  mcp_loader.py
chatbot/: models.py  service.py
modules/api/: chatbot_service.py  models.py
modules/chatbot/: models.py  service.py
modules/clients/: chatbot_client.py  llm_service.py  mcp_client.py
modules/helpers/: mcp_servers.py  mcp_tools.py
modules/models/: __init__.py
modules/services/: mcp_server_service.py
servers/: get_time.py  pastebin.py
tests/: load_tools_test.py
