[project]
name = "personal-assistant-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "xmltodict>=0.14.2",
    "pytz>=2025.2",
]
